Disable routine download when no data saved

--- a/entrenamientos.html
+++ b/entrenamientos.html
@@ -53,6 +53,10 @@
             <i class="fas fa-file-pdf"></i> Exportar PDF
           </button>
 
+          <button class="btn-secondary" id="downloadRoutineBtn">
+            <i class="fas fa-download"></i> Descargar Rutina
+          </button>
+
           <button class="btn-secondary" id="regenerateRoutineBtn">
             <i class="fas fa-sync"></i> Regenerar
           </button>
